--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -17,7 +17,27 @@
 
 <body>
   <header>
+    <nav class="navbar">
+      <div class="navbar--logo-box">
+        <img src="./assets/logo.png" alt="bankist-logo" class="header--logo">
+        bankist
+      </div>
 
+      <ul class="navbar--links">
+        <li>
+          <a href="#" class="navbar--link">Features</a>
+        </li>
+        <li>
+          <a href="#" class="navbar--link">Operations</a>
+        </li>
+        <li>
+          <a href="#" class="navbar--link">Testimonials</a>
+        </li>
+        <li>
+          <a href="#" class="navbar--link btn--open-account">Open Account</a>
+        </li>
+      </ul>
+    </nav>
   </header>
 
   <main>
