chore: uploaded image assets

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon">
+  <link rel="shortcut icon" type="image/png" href="./assets/icon.png" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -41,7 +42,17 @@
   </header>
 
   <main>
+    <section class="hero">
+      <div class="hero--text-contents">
+        <h1 class="hero--title">When banking meets minimalist</h1>
+        <p class="hero--tagline">A simpler banking experience for a simpler life</p>
+        <a href="#" class="hero--learn-more">Learn more</a>
+      </div>
 
+      <div class="hero--image-box">
+        <img src="" alt="hero-image" class="hero--image">
+      </div>
+    </section>
   </main>
 
   <script src="js/script.js"></script>
