feat: hero section structure completed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 
   <title>Bankist</title>
@@ -19,12 +19,9 @@
 <body>
   <header>
     <nav class="navbar">
-      <div class="navbar--logo-box">
-        <img src="./assets/logo.png" alt="bankist-logo" class="header--logo">
-        bankist
-      </div>
+      <img src="./assets/logo.png" alt="bankist-logo" class="header--logo">
 
-      <ul class="navbar--links">
+      <ul class="header--links">
         <li>
           <a href="#" class="navbar--link">Features</a>
         </li>
@@ -49,8 +46,17 @@
         <a href="#" class="hero--learn-more">Learn more</a>
       </div>
 
-      <div class="hero--image-box">
-        <img src="" alt="hero-image" class="hero--image">
+      <div class="hero--image-control">
+        <img src="./assets/hero.png" alt="hero-image" class="hero--image">
+      </div>
+    </section>
+
+    <section class="features">
+      <div class="section--intro">
+        <span class="section--name">Features</span>
+        <h2 class="section--heading">
+          Everything you need in a modern bank and more
+        </h2>
       </div>
     </section>
   </main>
