feat: operations section structure completed

--- a/index.html
+++ b/index.html
@@ -112,6 +112,78 @@
         </div>
       </div>
     </section>
+
+    <section id="section--2" class="section">
+      <div class="section__intro">
+        <span class="section__name">Operations</span>
+        <h2 class="section__heading">
+          Everything as simple as possible, but no simpler.
+        </h2>
+      </div>
+
+      <div class="operations">
+        <div class="operations__controls">
+          <button id="btn__transfer" class="btn__operation">Instant Transfers</button>
+          <button id="btn__loan" class="btn__operation">Instant Loan</button>
+          <button id="btn__close" class="btn__operation">Instant Closing</button>
+        </div>
+
+        <div class="operation__details operation__transfer-details">
+          <svg>
+            <use xlink:href="./assets/icons.svg#icon-upload"></use>
+          </svg>
+
+          <div>
+            <h3 class="operation__heading">
+              Transfer money to anyone, instantly! No fees, no BS.
+            </h3>
+            <p class="operation__description">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+              ea commodo consequat.
+            </p>
+          </div>
+        </div>
+
+        <div class="operation__details operation__loan-details">
+          <svg>
+            <use xlink:href="./assets/icons.svg#icon-home"></use>
+          </svg>
+
+          <div>
+            <h3 class="operation__heading">
+              Buy a home or make your dreams come true, with instant loans.
+            </h3>
+            <p class="operation__description">
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint cupidatat non proident, sunt in culpa qui officia
+              deserunt mollit anim id est laborum.
+            </p>
+          </div>
+        </div>
+
+        <div class="operation__details operation__close-details">
+          <svg>
+            <use xlink:href="./assets/icons.svg#icon-user-x"></use>
+          </svg>
+
+          <div>
+            <h3 class="operation__heading">
+              No longer need your account? No problem! Close it instantly.
+            </h3>
+            <p class="operation__description">
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+              laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <section class="section"></section> -->
+
+    <!-- <section class="section"></section> -->
   </main>
 
   <script src="js/script.js"></script>
