feat: testimonial section structure completed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section id="section--1" class="section">
       <div class="section__intro">
-        <span class="section__name">Features</span>
+        <span class="section__tag">Features</span>
         <h2 class="section__heading">
           Everything you need in a modern bank and more
         </h2>
@@ -115,7 +115,7 @@
 
     <section id="section--2" class="section">
       <div class="section__intro">
-        <span class="section__name">Operations</span>
+        <span class="section__tag">Operations</span>
         <h2 class="section__heading">
           Everything as simple as possible, but no simpler.
         </h2>
@@ -181,7 +181,78 @@
       </div>
     </section>
 
-    <!-- <section class="section"></section> -->
+    <section id="section--3" class="section">
+      <div class="section__intro">
+        <span class="section__tag">Not sure yet?</span>
+        <h2 class="section__heading">
+          Millions of Bankists are already making their lives simpler.
+        </h2>
+      </div>
+
+      <div class="carousel">
+        <div class="testimonial">
+          <h4 class="testimonial__heading">
+            The last step to becoming a complete minimalist
+          </h4>
+          <p class="testimonial__details">
+            Quisquam itaque deserunt ullam, quia ea repellendus provident, ducimus neque ipsam modi voluptatibus
+            doloremque, corrupti laborum. Incidunt numquam perferendis veritatis neque repellendus. Lorem, ipsum dolor
+            sit amet consectetur adipisicing elit. Illo deserunt exercitationem deleniti.
+          </p>
+
+          <div class="testimonial__author">
+            <img src="./assets/user-1.jpg" alt="author" class="author__image">
+            <h5 class="author__name">Aarav Lynn</h5>
+            <span class="author__location">San Francisco, USA</span>
+          </div>
+        </div>
+
+        <div class="testimonial">
+          <h4 class="testimonial__heading">
+            Best financial decision ever!
+          </h4>
+          <p class="testimonial__details">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium quas quisquam non? Quas voluptate
+            nulla minima deleniti optio ullam nesciunt, numquam corporis et asperiores laboriosam sunt, praesentium
+            suscipit blanditiis. Necessitatibus id alias reiciendis, perferendis facere pariatur dolore veniam autem
+            esse non voluptatem saepe provident nihil molestiae.
+          </p>
+
+          <div class="testimonial__author">
+            <img src="./assets/user-2.jpg" alt="author" class="author__image">
+            <h5 class="author__name">Miyah Miles</h5>
+            <span class="author__location">London, UK</span>
+          </div>
+        </div>
+
+        <div class="testimonial">
+          <h4 class="testimonial__heading">
+            Finally free from old school banks
+          </h4>
+          <p class="testimonial__details">
+            Debitis, nihil sit minus suscipit magni aperiam vel tenetur incidunt commodi architecto numquam omnis nulla
+            autem, necessitatibus blanditiis modi similique quidem. Odio aliquam culpa dicta beatae quod maiores ipsa
+            minus consequatur error sunt, deleniti saepe aliquid quos inventore sequi. Necessitatibus id alias
+            reiciendis, perferendis facere.
+          </p>
+
+          <div class="testimonial__author">
+            <img src="./assets/user-3.jpg" alt="author" class="author__image">
+            <h5 class="author__name">Francisco Gomes</h5>
+            <span class="author__location">Lisbon, Portugal</span>
+          </div>
+        </div>
+
+        <button id="btn__right" class="btn__slider">&leftarrow;</button>
+        <button id="btn__left" class="btn__slider">&rightarrow;</button>
+
+        <div class="carousel__pagination">
+          <button class="btn--pagination"></button>
+          <button class="btn--pagination"></button>
+          <button class="btn--pagination"></button>
+        </div>
+      </div>
+    </section>
 
     <!-- <section class="section"></section> -->
   </main>
