feat: call-to-action section structure completed

--- a/index.html
+++ b/index.html
@@ -254,7 +254,16 @@
       </div>
     </section>
 
-    <!-- <section class="section"></section> -->
+    <section id="section--4" class="section">
+      <h2 class="cta--title">
+        The best time to join Bankist was a year ago. The second best time is today
+      </h2>
+
+
+      <a href="#" class="btn--open-account">
+        Open your free account today
+      </a>
+    </section>
   </main>
 
   <script src="js/script.js"></script>
