--- a/index.html
+++ b/index.html
@@ -266,6 +266,24 @@
     </section>
   </main>
 
+  <footer>
+    <ul class="footer--nav">
+      <li class="footer__link"><a href="#">About</a></li>
+      <li class="footer__link"><a href="#">Pricing</a></li>
+      <li class="footer__link"><a href="#">Terms of Use</a></li>
+      <li class="footer__link"><a href="#">Privacy Policy</a></li>
+      <li class="footer__link"><a href="#">Careers</a></li>
+      <li class="footer__link"><a href="#">Blog</a></li>
+      <li class="footer__link"><a href="#">Contact Us</a></li>
+    </ul>
+
+    <img src="./assets/icon.png" alt="logo" class="footer__logo">
+
+    <p class="footer__copyright">
+      developed by <a href="https://danielezekiel.me" class="developer--name">Daniel B. Ezekiel</a>
+    </p>
+  </footer>
+
   <script src="js/script.js"></script>
 </body>
 
