feat: styled and implemented mobile responsive navbar and hamburger menu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar">
       <img src="./assets/logo.png" alt="bankist-logo" class="header__logo">
 
-      <ul class="header__links">
+      <ul class="header__nav">
         <li>
           <a href="#" class="navbar__link">Features</a>
         </li>
@@ -35,6 +35,10 @@
           <a href="#" class="navbar__link btn--open-account">Open Account</a>
         </li>
       </ul>
+
+      <button class="btn--hamburger" type="button">
+        <div class="menubar"></div>
+      </button>
     </nav>
   </header>
 
