style: responsive header and hero section across all devices

--- a/index.html
+++ b/index.html
@@ -40,21 +40,23 @@
         <div class="menubar"></div>
       </button>
     </nav>
-  </header>
 
-  <main>
-    <section class="hero">
+    <section class="hero section">
       <div class="hero__text-contents">
         <h1 class="hero__title">When banking meets minimalist</h1>
         <p class="hero__tagline">A simpler banking experience for a simpler life</p>
-        <a href="#" class="hero__learn-more">Learn more</a>
+        <a href="#" class="hero__learn-more">
+          Learn more &downarrow;
+        </a>
       </div>
 
       <div class="hero__image-control">
         <img src="./assets/hero.png" alt="hero-image" class="hero__image">
       </div>
     </section>
+  </header>
 
+  <main>
     <section id="section--1" class="section">
       <div class="section__intro">
         <span class="section__tag">Features</span>
