style: implemented word highlight feature in hero title text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
     <section class="hero section">
       <div class="hero__text-contents">
-        <h1 class="hero__title">When banking meets minimalist</h1>
+        <h1 class="hero__title">
+          When <span class="title__highlight">banking</span> meets <span class="title__highlight">minimalist</span>
+        </h1>
         <p class="hero__tagline">A simpler banking experience for a simpler life</p>
         <a href="#" class="hero__learn-more">
           Learn more &downarrow;
