style: features section fully responsive across all devices

--- a/index.html
+++ b/index.html
@@ -68,12 +68,16 @@
       </div>
 
       <div class="feature">
-        <img src="./assets/digital.jpg" alt="computer" class="feature__image">
+        <div class="feature__img-control">
+          <img src="./assets/digital.jpg" alt="computer" class="feature__image">
+        </div>
 
         <div class="feature__details">
-          <svg>
-            <use xlink:href="./assets/icons.svg#icon-monitor"></use>
-          </svg>
+          <div class="feature__icon">
+            <svg>
+              <use xlink:href="./assets/icons.svg#icon-monitor"></use>
+            </svg>
+          </div>
           <h3 class="feature__heading">
             100% digital bank
           </h3>
@@ -85,12 +89,16 @@
       </div>
 
       <div class="feature">
-        <img src="./assets/grow.jpg" alt="plant" class="feature__image">
+        <div class="feature__img-control">
+          <img src="./assets/grow.jpg" alt="plant" class="feature__image">
+        </div>
 
         <div class="feature__details">
-          <svg>
-            <use xlink:href="./assets/icons.svg#icon-trending-up"></use>
-          </svg>
+          <div class="feature__icon">
+            <svg>
+              <use xlink:href="./assets/icons.svg#icon-trending-up"></use>
+            </svg>
+          </div>
           <h3 class="feature__heading">
             Watch your money grow
           </h3>
@@ -103,12 +111,16 @@
       </div>
 
       <div class="feature">
-        <img src="./assets/card.jpg" alt="card" class="feature__image">
+        <div class="feature__img-control">
+          <img src="./assets/card.jpg" alt="card" class="feature__image">
+        </div>
 
         <div class="feature__details">
-          <svg>
-            <use xlink:href="./assets/icons.svg#icon-credit-card"></use>
-          </svg>
+          <div class="feature__icon">
+            <svg>
+              <use xlink:href="./assets/icons.svg#icon-credit-card"></use>
+            </svg>
+          </div>
           <h3 class="feature__heading">
             Free debit card included
           </h3>
