style: operations section responsiveness completed

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
 
         <div class="feature__details">
-          <div class="feature__icon">
+          <div class="icon--control">
             <svg>
               <use xlink:href="./assets/icons.svg#icon-monitor"></use>
             </svg>
@@ -94,7 +94,7 @@
         </div>
 
         <div class="feature__details">
-          <div class="feature__icon">
+          <div class="icon--control">
             <svg>
               <use xlink:href="./assets/icons.svg#icon-trending-up"></use>
             </svg>
@@ -116,7 +116,7 @@
         </div>
 
         <div class="feature__details">
-          <div class="feature__icon">
+          <div class="icon--control">
             <svg>
               <use xlink:href="./assets/icons.svg#icon-credit-card"></use>
             </svg>
@@ -143,15 +143,17 @@
 
       <div class="operations">
         <div class="operations__controls">
-          <button id="btn__transfer" class="btn__operation">Instant Transfers</button>
-          <button id="btn__loan" class="btn__operation">Instant Loan</button>
-          <button id="btn__close" class="btn__operation">Instant Closing</button>
+          <button id="btn__transfer" class="btn__operation active"><span>01.</span>Instant Transfers</button>
+          <button id="btn__loan" class="btn__operation"><span>02.</span>Instant Loan</button>
+          <button id="btn__close" class="btn__operation"><span>03.</span>Instant Closing</button>
         </div>
 
-        <div class="operation__details operation__transfer-details">
-          <svg>
-            <use xlink:href="./assets/icons.svg#icon-upload"></use>
-          </svg>
+        <div class="operation__details operation__transfer-details active">
+          <div class="icon--control">
+            <svg>
+              <use xlink:href="./assets/icons.svg#icon-upload"></use>
+            </svg>
+          </div>
 
           <div>
             <h3 class="operation__heading">
@@ -166,9 +168,11 @@
         </div>
 
         <div class="operation__details operation__loan-details">
-          <svg>
-            <use xlink:href="./assets/icons.svg#icon-home"></use>
-          </svg>
+          <div class="icon--control">
+            <svg>
+              <use xlink:href="./assets/icons.svg#icon-home"></use>
+            </svg>
+          </div>
 
           <div>
             <h3 class="operation__heading">
@@ -183,9 +187,11 @@
         </div>
 
         <div class="operation__details operation__close-details">
-          <svg>
-            <use xlink:href="./assets/icons.svg#icon-user-x"></use>
-          </svg>
+          <div class="icon--control">
+            <svg>
+              <use xlink:href="./assets/icons.svg#icon-user-x"></use>
+            </svg>
+          </div>
 
           <div>
             <h3 class="operation__heading">
