--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@
           </div>
         </div>
 
-        <button id="btn__right" class="btn__slider">&leftarrow;</button>
-        <button id="btn__left" class="btn__slider">&rightarrow;</button>
+        <button id="btn__right" class="btn__slider">&rightarrow;</button>
+        <button id="btn__left" class="btn__slider">&leftarrow;</button>
 
         <div class="carousel__pagination">
-          <button class="btn--pagination"></button>
+          <button class="btn--pagination active"></button>
           <button class="btn--pagination"></button>
           <button class="btn--pagination"></button>
         </div>
