--- a/index.html
+++ b/index.html
@@ -216,56 +216,63 @@
       </div>
 
       <div class="carousel">
-        <div class="testimonial">
-          <h4 class="testimonial__heading">
-            The last step to becoming a complete minimalist
-          </h4>
-          <p class="testimonial__details">
-            Quisquam itaque deserunt ullam, quia ea repellendus provident, ducimus neque ipsam modi voluptatibus
-            doloremque, corrupti laborum. Incidunt numquam perferendis veritatis neque repellendus. Lorem, ipsum dolor
-            sit amet consectetur adipisicing elit. Illo deserunt exercitationem deleniti.
-          </p>
+        <div class="slide">
+          <div class="testimonial">
+            <h4 class="testimonial__heading">
+              The last step to becoming a complete minimalist
+            </h4>
+            <p class="testimonial__details">
+              Quisquam itaque deserunt ullam, quia ea repellendus provident, ducimus neque ipsam modi voluptatibus
+              doloremque, corrupti laborum. Incidunt numquam perferendis veritatis neque repellendus. Lorem, ipsum dolor
+              sit amet consectetur adipisicing elit. Illo deserunt exercitationem deleniti.
+            </p>
 
-          <div class="testimonial__author">
-            <img src="./assets/user-1.jpg" alt="author" class="author__image">
-            <h5 class="author__name">Aarav Lynn</h5>
-            <span class="author__location">San Francisco, USA</span>
+            <div class="testimonial__author">
+              <img src="./assets/user-1.jpg" alt="author" class="author__image">
+              <h5 class="author__name">Aarav Lynn</h5>
+              <span class="author__location">San Francisco, USA</span>
+            </div>
           </div>
         </div>
 
-        <div class="testimonial">
-          <h4 class="testimonial__heading">
-            Best financial decision ever!
-          </h4>
-          <p class="testimonial__details">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium quas quisquam non? Quas voluptate
-            nulla minima deleniti optio ullam nesciunt, numquam corporis et asperiores laboriosam sunt, praesentium
-            suscipit blanditiis. Necessitatibus id alias reiciendis, perferendis facere pariatur dolore veniam autem
-            esse non voluptatem saepe provident nihil molestiae.
-          </p>
+        <div class="slide">
+          <div class="testimonial">
+            <h4 class="testimonial__heading">
+              Best financial decision ever!
+            </h4>
+            <p class="testimonial__details">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium quas quisquam non? Quas voluptate
+              nulla minima deleniti optio ullam nesciunt, numquam corporis et asperiores laboriosam sunt, praesentium
+              suscipit blanditiis. Necessitatibus id alias reiciendis, perferendis facere pariatur dolore veniam autem
+              esse non voluptatem saepe provident nihil molestiae.
+            </p>
 
-          <div class="testimonial__author">
-            <img src="./assets/user-2.jpg" alt="author" class="author__image">
-            <h5 class="author__name">Miyah Miles</h5>
-            <span class="author__location">London, UK</span>
+            <div class="testimonial__author">
+              <img src="./assets/user-2.jpg" alt="author" class="author__image">
+              <h5 class="author__name">Miyah Miles</h5>
+              <span class="author__location">London, UK</span>
+            </div>
           </div>
         </div>
 
-        <div class="testimonial">
-          <h4 class="testimonial__heading">
-            Finally free from old school banks
-          </h4>
-          <p class="testimonial__details">
-            Debitis, nihil sit minus suscipit magni aperiam vel tenetur incidunt commodi architecto numquam omnis nulla
-            autem, necessitatibus blanditiis modi similique quidem. Odio aliquam culpa dicta beatae quod maiores ipsa
-            minus consequatur error sunt, deleniti saepe aliquid quos inventore sequi. Necessitatibus id alias
-            reiciendis, perferendis facere.
-          </p>
+        <div class="slide">
+          <div class="testimonial">
+            <h4 class="testimonial__heading">
+              Finally free from old school banks
+            </h4>
+            <p class="testimonial__details">
+              Debitis, nihil sit minus suscipit magni aperiam vel tenetur incidunt commodi architecto numquam omnis
+              nulla
+              autem, necessitatibus blanditiis modi similique quidem. Odio aliquam culpa dicta beatae quod maiores ipsa
+              minus consequatur error sunt, deleniti saepe aliquid quos inventore sequi. Necessitatibus id alias
+              reiciendis, perferendis facere.
+            </p>
 
-          <div class="testimonial__author">
-            <img src="./assets/user-3.jpg" alt="author" class="author__image">
-            <h5 class="author__name">Francisco Gomes</h5>
-            <span class="author__location">Lisbon, Portugal</span>
+            <div class="testimonial__author">
+              <img src="./assets/user-3.jpg" alt="author" class="author__image">
+              <h5 class="author__name">Francisco Gomes</h5>
+              <span class="author__location">Lisbon, Portugal</span>
+            </div>
           </div>
         </div>
 
