style: footer fully responsive

--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
 
     <img src="./assets/icon.png" alt="logo" class="footer__logo">
 
-    <p class="footer__copyright">
-      developed by <a href="https://danielezekiel.me" class="developer--name">Daniel B. Ezekiel</a>
-    </p>
+    <!-- <p class="site__info">
+      developed by <a href="https://danielezekiel.me" target="_blank" class="developer--name">Daniel B. Ezekiel</a>
+    </p> -->
   </footer>
 
   <script src="js/script.js"></script>
