--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
 
     <img src="./assets/icon.png" alt="logo" class="footer__logo">
 
-    <!-- <p class="site__info">
+    <p class="site__info">
       developed by <a href="https://danielezekiel.me" target="_blank" class="developer--name">Daniel B. Ezekiel</a>
-    </p> -->
+    </p>
   </footer>
 
   <script src="js/script.js"></script>
