feat:implemented create account modal popup

--- a/index.html
+++ b/index.html
@@ -299,6 +299,32 @@
     </section>
   </main>
 
+  <div class="form--open-account">
+    <form>
+      <legend>Open your bank account in just <span class="title__highlight">5 minutes</span></legend>
+
+      <div class="form--control">
+        <label for="firstName">First Name</label>
+        <input id="firstName" type="text">
+      </div>
+
+      <div class="form--control">
+        <label for="lastName">Last Name</label>
+        <input id="lastName" type="text">
+      </div>
+
+      <div class="form--control">
+        <label for="email">Email</label>
+        <input id="email" type="email">
+      </div>
+
+      <button class="btn--next-step">Next step &rightarrow;</button>
+    </form>
+
+    <div class="overlay--close">&times</div>
+  </div>
+  <div class="overlay"></div>
+
   <footer>
     <ul class="footer--nav">
       <li class="footer__link"><a href="#">About</a></li>
@@ -316,7 +342,6 @@
       developed by <a href="https://danielezekiel.me" target="_blank" class="developer--name">Daniel B. Ezekiel</a>
     </p>
   </footer>
-
   <script src="js/script.js"></script>
 </body>
 
