chore: implemented smooth scroll and changed a couple ids

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
       <ul class="header__nav">
         <li>
-          <a href="#" class="navbar__link">Features</a>
+          <a href="#features" class="navbar__link">Features</a>
         </li>
         <li>
-          <a href="#" class="navbar__link">Operations</a>
+          <a href="#operations" class="navbar__link">Operations</a>
         </li>
         <li>
-          <a href="#" class="navbar__link">Testimonials</a>
+          <a href="#testimonials" class="navbar__link">Testimonials</a>
         </li>
         <li>
           <a href="#" class="navbar__link btn--open-account">Open Account</a>
@@ -47,7 +47,7 @@
           When <span class="title__highlight">banking</span> meets <span class="title__highlight">minimalist</span>
         </h1>
         <p class="hero__tagline">A simpler banking experience for a simpler life</p>
-        <a href="#" class="hero__learn-more">
+        <a href="#features" class="hero__learn-more">
           Learn more &downarrow;
         </a>
       </div>
@@ -59,7 +59,7 @@
   </header>
 
   <main>
-    <section id="section--1" class="section">
+    <section id="features" class="section">
       <div class="section__intro">
         <span class="section__tag">Features</span>
         <h2 class="section__heading">
@@ -133,7 +133,7 @@
       </div>
     </section>
 
-    <section id="section--2" class="section">
+    <section id="operations" class="section">
       <div class="section__intro">
         <span class="section__tag">Operations</span>
         <h2 class="section__heading">
@@ -207,7 +207,7 @@
       </div>
     </section>
 
-    <section id="section--3" class="section">
+    <section id="testimonials" class="section">
       <div class="section__intro">
         <span class="section__tag">Not sure yet?</span>
         <h2 class="section__heading">
@@ -287,7 +287,7 @@
       </div>
     </section>
 
-    <section id="section--4" class="section">
+    <section id="cta" class="section">
       <h2 class="cta--title">
         The best time to join Bankist was a year ago. The second best time is today
       </h2>
