chore: added anchor to site logo and improved responsiveness on smaller screens

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <body>
   <header>
     <nav class="navbar">
-      <img src="./assets/logo.png" alt="bankist-logo" class="header__logo">
+      <a href="/">
+        <img src="./assets/logo.png" alt="bankist-logo" class="header__logo">
+      </a>
 
       <ul class="header__nav">
         <li>
