feat: implemented smooth scrolling using javascript for the nav and hero buttons

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 
       <ul class="header__nav">
         <li>
-          <a href="#features" class="navbar__link">Features</a>
+          <a href="" class="navbar__link">Features</a>
         </li>
         <li>
-          <a href="#operations" class="navbar__link">Operations</a>
+          <a href="" class="navbar__link">Operations</a>
         </li>
         <li>
-          <a href="#testimonials" class="navbar__link">Testimonials</a>
+          <a href="" class="navbar__link">Testimonials</a>
         </li>
         <li>
-          <a href="#" class="navbar__link btn--open-account">Open Account</a>
+          <a href="" class="navbar__link btn--open-account">Open Account</a>
         </li>
       </ul>
 
@@ -49,7 +49,7 @@
           When <span class="title__highlight">banking</span> meets <span class="title__highlight">minimalist</span>
         </h1>
         <p class="hero__tagline">A simpler banking experience for a simpler life</p>
-        <a href="#features" class="hero__learn-more">
+        <a href="" class="btn__learn-more">
           Learn more &downarrow;
         </a>
       </div>
