--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="" class="navbar__link">Testimonials</a>
         </li>
         <li>
-          <a href="" class="navbar__link btn--open-account">Open Account</a>
+          <a href="" class="btn--open-account">Open Account</a>
         </li>
       </ul>
 
