feat: implemented tabbed componenet functionality for the operations section

--- a/index.html
+++ b/index.html
@@ -145,9 +145,12 @@
 
       <div class="operations">
         <div class="operations__controls">
-          <button id="btn__transfer" class="btn__operation active"><span>01.</span>Instant Transfers</button>
-          <button id="btn__loan" class="btn__operation"><span>02.</span>Instant Loan</button>
-          <button id="btn__close" class="btn__operation"><span>03.</span>Instant Closing</button>
+          <button id="btn__transfer" class="btn__operation active"
+            for=".operation__transfer-details"><span>01.</span>Instant Transfers</button>
+          <button id="btn__loan" class="btn__operation" for=".operation__loan-details"><span>02.</span>Instant
+            Loan</button>
+          <button id="btn__close" class="btn__operation" for=".operation__close-details"><span>03.</span>Instant
+            Closing</button>
         </div>
 
         <div class="operation__details operation__transfer-details active">
