fix: improved functionality for sticky onscroll feature

--- a/index.html
+++ b/index.html
@@ -18,30 +18,32 @@
 
 <body>
   <header>
-    <nav class="navbar">
-      <a href="/">
-        <img src="./assets/logo.png" alt="bankist-logo" class="header__logo">
-      </a>
+    <div class="navbar--container">
+      <nav class="navbar">
+        <a href="/">
+          <img src="./assets/logo.png" alt="bankist-logo" class="header__logo">
+        </a>
 
-      <ul class="header__nav">
-        <li>
-          <a href="#features" class="navbar__link">Features</a>
-        </li>
-        <li>
-          <a href="#operations" class="navbar__link">Operations</a>
-        </li>
-        <li>
-          <a href="#testimonials" class="navbar__link">Testimonials</a>
-        </li>
-        <li>
-          <a href="#" class="btn--open-account navbar__link">Open Account</a>
-        </li>
-      </ul>
+        <ul class="header__nav">
+          <li>
+            <a href="#features" class="navbar__link">Features</a>
+          </li>
+          <li>
+            <a href="#operations" class="navbar__link">Operations</a>
+          </li>
+          <li>
+            <a href="#testimonials" class="navbar__link">Testimonials</a>
+          </li>
+          <li>
+            <a href="#" class="btn--open-account navbar__link">Open Account</a>
+          </li>
+        </ul>
 
-      <button class="btn--hamburger" type="button">
-        <div class="menubar"></div>
-      </button>
-    </nav>
+        <button class="btn--hamburger" type="button">
+          <div class="menubar"></div>
+        </button>
+      </nav>
+    </div>
 
     <section class="hero section">
       <div class="hero__text-contents">
