feat: implemented lazy loading using the intersection api

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 
       <div class="feature">
         <div class="feature__img-control">
-          <img src="./assets/digital.jpg" alt="computer" class="feature__image">
+          <img src="./assets/digital.jpg" alt="computer" class="feature__image" data-lazy="./assets/digital-lazy.jpg"
+            data-src="./assets/digital.jpg">
         </div>
 
         <div class="feature__details">
@@ -94,7 +95,8 @@
 
       <div class="feature">
         <div class="feature__img-control">
-          <img src="./assets/grow.jpg" alt="plant" class="feature__image">
+          <img src="./assets/grow.jpg" alt="plant" class="feature__image" data-lazy="./assets/grow-lazy.jpg"
+            data-src="./assets/grow.jpg">
         </div>
 
         <div class="feature__details">
@@ -116,7 +118,8 @@
 
       <div class="feature">
         <div class="feature__img-control">
-          <img src="./assets/card.jpg" alt="card" class="feature__image">
+          <img src="./assets/card.jpg" alt="card" class="feature__image" data-lazy="./assets/card-lazy.jpg"
+            data-src="./assets/card.jpg">
         </div>
 
         <div class="feature__details">
