--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       </div>
 
       <div class="carousel">
-        <div class="slide">
+        <div class="slide" data-no="1">
           <div class="testimonial">
             <h4 class="testimonial__heading">
               The last step to becoming a complete minimalist
@@ -245,7 +245,7 @@
           </div>
         </div>
 
-        <div class="slide">
+        <div class="slide" data-no="2">
           <div class="testimonial">
             <h4 class="testimonial__heading">
               Best financial decision ever!
@@ -265,7 +265,7 @@
           </div>
         </div>
 
-        <div class="slide">
+        <div class="slide" data-no="3">
           <div class="testimonial">
             <h4 class="testimonial__heading">
               Finally free from old school banks
@@ -286,8 +286,8 @@
           </div>
         </div>
 
-        <button id="btn__right" class="btn__slider">&rightarrow;</button>
         <button id="btn__left" class="btn__slider">&leftarrow;</button>
+        <button id="btn__right" class="btn__slider">&rightarrow;</button>
 
         <div class="carousel__pagination">
           <button class="btn--pagination active"></button>
