feat:carousel also works on pagination click

--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
         <button id="btn__right" class="btn__slider">&rightarrow;</button>
 
         <div class="carousel__pagination">
-          <button class="btn--pagination active"></button>
-          <button class="btn--pagination"></button>
-          <button class="btn--pagination"></button>
+          <button class="btn--pagination active" data-no="0"></button>
+          <button class="btn--pagination" data-no="1"></button>
+          <button class="btn--pagination" data-no="2"></button>
         </div>
       </div>
     </section>
